tests-integration/tests/roundtrip/invalid/semantic/typecheck/bool_constant_in_set_expr/tree-sitter.expected-error.txt
tests/roundtrip/invalid/semantic/typecheck/bool_constant_in_set_expr/input.essence:2:11:
  |
2 | such that true subsetEq s 
  |           ^
Type error: true
	Expected: set
	Got: bool